fix: #43 - add font awesome cdn. wrap vid in container

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,10 @@ p #underline {
     position: fixed !important;
     height: auto !important;
     right: 0; }
+  #about #video-container {
+    display: flex;
+    width: 100%;
+    height: 100%; }
   #about #title {
     width: 100%; }
   #about #bg {
